fix app height on mobile browsers

--- a/public/global.css
+++ b/public/global.css
@@ -8,6 +8,7 @@ body {
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue',
     sans-serif;
+  overflow: hidden;
 }
 
 @font-face {
